# codexrag

./: .gitignore  CONTRIBUTING.md  CodeXRAG_USER_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  UPGRADE_PLAN.md  UPGRADE_V0.4.0.md  USAGE_GUIDE.md  config.yaml  config_advanced.yaml  pyproject.toml  setup_env.sh
.github/workflows/: ci.yml
codexrag/: chunking.py  cli.py  config.py  fs_scan.py  gui.py  index_store.py  indexer.py  llm_ollama.py  prompting.py  qa.py  rerank.py  retriever.py  types.py  utils_hash.py  utils_warnings.py
codexrag/agents/: __init__.py  orchestrator.py  safety_agent.py
codexrag/eval/: __init__.py  golden_set.py  metrics.py
codexrag/graph/: __init__.py  code_graph.py  graph_retriever.py
codexrag/parsers/: __init__.py  base.py  cpp_block_parser.py  csv_parser.py  notebook_parser.py  pdf_parser.py  python_ast_parser.py  text_like.py
docs/: HOW_IT_WORKS.md  RAG_CONCEPTS.md
tests/: golden_set.json  test_basics.py
tests/golden/: questions.yaml
